objects/Test_Case_Step__c.object
<CustomObject>
 <fullName>Test_Case_Step__c</fullName>
 <fields>
  <fullName>Step_Number__c</fullName>
  <label>Step Number</label>
  <precision>18</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Test_Case__c</fullName>
  <label>Test Case</label>
  <referenceTo>Test_Case__c</referenceTo>
  <relationshipLabel>Test Case Steps</relationshipLabel>
  <relationshipName>Test_Case_Steps</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <fields>
  <fullName>Test_Step__c</fullName>
  <label>Test Step</label>
  <referenceTo>Test_Step__c</referenceTo>
  <relationshipLabel>Test Cases</relationshipLabel>
  <relationshipName>Test_Case_Steps</relationshipName>
  <relationshipOrder>1</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <label>Test Case Step</label>
 <nameField>
  <displayFormat>TCS-{000000}</displayFormat>
  <label>Test Case Step Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Test Case Steps</pluralLabel>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>